# advent2023

./: .bazelignore  BUILD  MODULE.bazel  jest.config.js  pnpm-lock.yaml  tsconfig.json
days/one/: BUILD  one.test.ts  one.ts  package.json  run-one.ts  run-two.ts
days/two/: BUILD  package.json  part-one.ts  part-two.ts  two.test.ts  two.ts
